src/objects/FSTR__Stage_Instance__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Stage Instances</relationshipLabel>
        <relationshipName>Stage_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Stage Instances</relationshipLabel>
        <relationshipName>Child_Stage_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Instance__c</fullName>
        <label>Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Stage Instances</relationshipLabel>
        <relationshipName>Stage_Instances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSTR__Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage</label>
        <referenceTo>FSTR__PCE_Stage__c</referenceTo>
        <relationshipLabel>Stage Instances</relationshipLabel>
        <relationshipName>Stage_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Total_Time_in_Stage__c</fullName>
        <formula>FSTR__Completed_Date__c  -  FSTR__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time in Stage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Stage Instance</label>
    <listViews>
        <fullName>FSTR__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stage Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>